cuda surf angepasst

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,28 +2,29 @@
     "files.associations": {
         "array": "cpp",
         "string_view": "cpp",
+        "*.ipp": "cpp",
+        "iostream": "cpp",
+        "bitset": "cpp",
         "initializer_list": "cpp",
         "utility": "cpp",
-        "string": "cpp",
         "ostream": "cpp",
-        "iostream": "cpp",
-        "atomic": "cpp",
-        "*.tcc": "cpp",
         "cctype": "cpp",
-        "chrono": "cpp",
         "clocale": "cpp",
         "cmath": "cpp",
-        "complex": "cpp",
-        "condition_variable": "cpp",
         "cstdarg": "cpp",
         "cstddef": "cpp",
-        "cstdint": "cpp",
         "cstdio": "cpp",
         "cstdlib": "cpp",
         "cstring": "cpp",
         "ctime": "cpp",
         "cwchar": "cpp",
         "cwctype": "cpp",
+        "atomic": "cpp",
+        "*.tcc": "cpp",
+        "chrono": "cpp",
+        "complex": "cpp",
+        "condition_variable": "cpp",
+        "cstdint": "cpp",
         "deque": "cpp",
         "list": "cpp",
         "unordered_map": "cpp",
@@ -38,6 +39,7 @@
         "optional": "cpp",
         "ratio": "cpp",
         "set": "cpp",
+        "string": "cpp",
         "system_error": "cpp",
         "tuple": "cpp",
         "type_traits": "cpp",
@@ -53,12 +55,6 @@
         "streambuf": "cpp",
         "thread": "cpp",
         "cinttypes": "cpp",
-        "typeinfo": "cpp",
-        "*.ipp": "cpp",
-        "bitset": "cpp",
-        "future": "cpp",
-        "shared_mutex": "cpp",
-        "typeindex": "cpp",
-        "variant": "cpp"
+        "typeinfo": "cpp"
     }
 }
