--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,5 +10,5 @@ include_directories(${PROJECT_SOURCE_DIR})
 include_directories(include)
 include_directories(${OpenCV_INCLUDE_DIRS})
 include_directories(include ${realsense_INCLUDE_DIR})
-add_executable(cv_hello main.cpp client.cpp)
+add_executable(cv_hello main.cpp client.cpp rsfeatures.cpp)
 target_link_libraries(cv_hello ${OpenCV_LIBS} ${realsense2_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
